# Decentralized-HiveMind-AI-Agents-Protocol

./: .env.example  .gitignore  CLA.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  LICENSE  README.md  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  cla-check.yml
.sqlx/: query-02dcbcc5d9046bc8e356f2510ce142859b2426dd6fb47867572da7b3c59a73c9.json  query-0547c2f385b19d9f1e283ccd6ec6c0d46cad1648904127f487aaf3d784018c58.json  query-09fd56ba638bb3c50420733b741fd88a3d6c07a7c4ba34a702dd834862a39332.json  query-110fcc4023c6877c43551fc9c90b7b84d2e37c154110d96a02060f6586fe9e4e.json  query-1f61a72545898f1c340c6612283a74003e58806bdc66e3fe75e09ed13dab9465.json  query-2a4707a1003f222970145c5db961637ce95b06f8da1d03f302debed71ea07e70.json  query-32061a354103e3b623f4f7913c2f073b43bfd9e0d2fa909530eebff8e2799ba2.json  query-376d11399631f982ad14264bc3be7788761a41c73fbd5c398522bc935ec40fe3.json  query-49ee98e1537f14be432da65bea432ea67a6002821feee6f3390983f87d7ed911.json  query-4c9d6e36b0c8299f8f4e9366805ec1a0881f936aea9cd358b404d6e0b4a0dbd3.json  query-5072bdf015c0b9961797bde10dbe69885c7d11ceb219975ce8808600399e739c.json  query-525252206a9926b596bea481acee2415213039eaeec67479d6aa295d122cd8f9.json  query-52894fd6e69d60b04561ac4945e90a0f3172f4ec2bb9a841cec09d5a026ae8ab.json  query-571e075f17ed1724057e596ecf2e13ecd7c2e698b1eec18c7db1e0437fc6d040.json  query-591e51f6d4df9ef5f02af3ce9986ef1c36b8b6bde528f31efe3443fc7778e57d.json  query-65c7acc036b0d336fdd4ddaeff1ce0df066886e587a2492a427ba43b033baeee.json  query-6d1aefa2462aea6d3397c7e142f4d740b99afb7ae510b5f5d42a87df3a501aa0.json  query-6fc35efedee45a631b5608babcc95907041bfe0ca68c14728139f4038aa24533.json  query-70898cbcceb5672e3e111bb809c65e91d23814777ef9e0e4e77eea6e0834339b.json  query-7a374fca254d87eeac3ebb5a059ad86d4b43ee7ccc53ba4c45e15de264db2639.json  query-aa2f22a266d4900777c843a934365765e795d81a404641b06fff687acfb98606.json  query-af98c2a5f67535f008dfeb325d882c23490bb960d6cc1737b10f437b59a129b6.json  query-c2ee8f956d56ba28b5edcaf5c0c54e93c0794618f5619a2260dac71afd81a907.json  query-c31f2cfc61c6b70a6a0634937a077e2e816b9deecb35fda105927a773e582997.json  query-c5bb64b6e900e01f07a6303e6d7be29d9bc43ecdce8809f8d38600f111461672.json  query-c8be4eacbc13ff62629e36017c5e08f2e97de52c78559d5d66158c53affa545f.json  query-c8c5f3a00560e4361fc3726c981d42d9a554bfe54e8960ea37491d0a921367ad.json  query-cc3c8211631a0f198743155c25fce84f39a2d90ecfe052ebf48de56e595a0781.json  query-ce90fd13702e243499d04791853f1ff986b9b9d0d1a9f173ebe89ab499d43b05.json  query-e11aeaa3249540e3f0afad218652ae03c1005b23e09cadee02c6ec758c614c3e.json  query-f8ef016a69f9d7a151742232f2fe3e31f4cc85e6719319bb8bd455940523200f.json  query-fb5d94ff4ec67151e232e22e9b6e64ff2b4c9b413bf735a736e211a5ae3cb841.json
common/: Cargo.toml
common/src/: credits.rs  identity.rs  lib.rs  tls.rs  types.rs
keygen/: Cargo.toml
keygen/src/: main.rs
node-client/: Cargo.toml
node-client/src/: config.rs  main.rs  runner.rs  ui.rs  wallet.rs
orchestrator/: Cargo.toml  Dockerfile
orchestrator/migrations/: 001_initial.sql
orchestrator/src/: config.rs  dag.rs  error.rs  main.rs  privacy.rs  state.rs  task_manager.rs  validator.rs
orchestrator/src/middleware/: auth.rs  mod.rs  rate_limit.rs
orchestrator/src/routes/: admin.rs  jobs.rs  mod.rs  nodes.rs  tasks.rs
