[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
ring = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
petgraph = { workspace = true }
rs_merkle = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rcgen = { workspace = true }
