[package]
name = "node-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable direct in-process llama.cpp inference (requires llama.cpp on system)
llama-direct = ["llama_cpp_rs"]

[dependencies]
common = { path = "../common", version = "0.1" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
dotenvy = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }

# Optional: direct llama.cpp bindings (correct crate name on crates.io)
llama_cpp_rs = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { workspace = true }
