[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common", version = "0.1" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
petgraph = { workspace = true }
governor = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ort = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
rs_merkle = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
nonzero_ext = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
